<resources>
    <string name="app_name">MathsMania</string>

    <string name="text_nom_jeu">MathsMania</string>
    <string name="text_description_jeu">Jeu des nombres</string>
    <string name="bouton_jouer">Jouer</string>
    <string name="bouton_meilleur_score">Meilleurs scores</string>
    <string name="bouton_a_propos">À propos</string>
    <string name="titre_a_propos">À propos</string>
    <string name="text_createur">Créé par</string>
    <string name="text_nom_createur">Thibault Forret\nEt\nQuentin Massoulle</string>
    <string name="text_features">Fonctionnalités supplémentaire</string>
    <string name="text_liste_features">
        Mode choix difficulté\n
        Mode évolutif\n
        Stock du mode de jeu dans BDD
    </string>

    <string name="text_game_score">Score :</string>
    <string name="text_game_life">❤️</string>
    <string name="text_reply_button">Répondre</string>
    <string name="text_reply_input">Entrez la réponse</string>
    <string name="text_fin_de_partie">Entre ton pseudo pour sauvegarder ton score</string>
    <string name="bouton_sauvegarder_score">Sauvegarder</string>
    <string name="text_score">Votre score</string>
    <string name="text_meilleurs_scores">MEILLEURS SCORES</string>

</resources>