<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_orange"
    tools:context=".InscriptionActivity">

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ResultLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_score"
                android:fontFamily="@font/architects_daughter"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="20sp" />

            <TextView
                android:id="@+id/score_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_marginBottom="20sp" />

            <TextView
                android:id="@+id/text_fin_de_partie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40sp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/text_fin_de_partie"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonActionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_edittext"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"
                android:padding="15sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginTop="20sp"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40sp"
                android:backgroundTint="@color/background_blue"
                android:fontFamily="@font/architects_daughter"
                android:padding="15dp"
                android:text="@string/bouton_sauvegarder_score"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="40sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>